tests/NormalTests/paczka1/fuzzy1/68644901.err
Error in line 3: S722 S722 42,0
Error in line 2: fDptxHTeR2q A685 29,1
Error in line 22: S722 S9 67,2
Error in line 27: fDptxHTeR2q A908 293,8
